<resources>
    <string name="app_name">Demeter</string>
    <string name="IniciarSesion">Inicar Sesion</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Nota">Favor de ingresar los datos correctos</string>
    <string name="Email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="contraseñacampo">********</string>
    <string name="olvidocontraseña">Olvido su contraseña?</string>
    <string name="confirmarcontraseña">Confirmar contraseña</string>
    <string name="informacion">Informacion</string>
    <string name="sintomas">Sintomas</string>
    <string name="notas">Notas</string>
    <string name="dias">faltan 3 dias para tu periodo</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_barra_de_abajo">Leanback BarraDeAbajo</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="title_activity_menu">Leanback menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>