<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodegradable"
    tools:context=".ui.LoginSingUp.Login">

        <ImageView
            android:id="@+id/atras1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_ios_new_24" />

        <ImageView
            android:id="@+id/Rectangulo"
            android:layout_width="412dp"
            android:layout_height="531dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/rectangulo" />

        <TextView
            android:id="@+id/Registrarse1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="44dp"
            android:text="@string/IniciarSesion"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Rectangulo" />

        <TextView
            android:id="@+id/nota1"
            android:layout_width="145dp"
            android:layout_height="63dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:text="@string/Nota"
            android:textColor="#6B000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Registrarse1" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="16dp"
            android:text="@string/Email"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nota1" />

        <TextView
            android:id="@+id/Contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/contraseña"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.129"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Email" />

        <EditText
            android:id="@+id/contraseñai"
            android:layout_width="193dp"
            android:layout_height="38dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#63000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.201"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Contraseña" />

        <Button
            android:id="@+id/botoniniciosesion"
            android:layout_width="286dp"
            android:layout_height="48dp"
            android:backgroundTint="#634C57"
            android:shadowColor="#FFFFFF"
            android:text="@string/IniciarSesion"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Rectangulo"
            app:layout_constraintVertical_bias="0.865"
            app:rippleColor="#E63D3D"
            app:strokeColor="#FFFFFF" />

        <TextView
            android:id="@+id/olvidocontra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olvidocontraseña"
            android:textColor="#0027FF"
            android:textColorHint="#1A2B8C"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botoniniciosesion"
            app:layout_constraintVertical_bias="0.239" />

        <ImageView
            android:id="@+id/demeterlogoi"
            android:layout_width="270dp"
            android:layout_height="275dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/Rectangulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/demeter__6_"
            app:tint="#000000" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="192dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />


</androidx.constraintlayout.widget.ConstraintLayout>