<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodegradable"
    tools:context=".ui.Register">


        <ImageView
            android:id="@+id/Rectangulo"
            android:layout_width="412dp"
            android:layout_height="531dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/rectangulo" />

        <TextView
            android:id="@+id/Registrarse1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="44dp"
            android:text="@string/Registrarse"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Rectangulo" />

        <TextView
            android:id="@+id/nota1"
            android:layout_width="145dp"
            android:layout_height="63dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:text="@string/Nota"
            android:textColor="#6B000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Registrarse1" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="16dp"
            android:text="@string/Email"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nota1" />

        <TextView
            android:id="@+id/Contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="20dp"
            android:text="@string/contraseña"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numcel" />

        <EditText
            android:id="@+id/contraseñaprim"
            android:layout_width="193dp"
            android:layout_height="38dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#63000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Contraseña" />

        <Button
            android:id="@+id/botonregistrarse"
            android:layout_width="286dp"
            android:layout_height="48dp"
            android:backgroundTint="#EDA6B6"
            android:text="@string/Registrarse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Rectangulo"
            app:layout_constraintVertical_bias="0.923" />

        <TextView
            android:id="@+id/confirmancontra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/confirmarcontraseña"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contraseñaprim" />

        <EditText
            android:id="@+id/confirmcontra"
            android:layout_width="195dp"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#63000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmancontra" />

        <ImageView
            android:id="@+id/demeterlogor"
            android:layout_width="270dp"
            android:layout_height="275dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#00000000"
            app:tint="#000000"
            app:layout_constraintBottom_toTopOf="@+id/Rectangulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/demeter__6_" />

        <EditText
            android:id="@+id/numcel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.217"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <ImageButton
            android:id="@+id/atras2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="#00FFFFFF"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>