<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondodegradable"
    android:layout_height="match_parent"
    tools:context=".ui.NuevoSintoma">


    <TextView
        android:id="@+id/Sintomas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sintomas"
        android:textColor="#FFFFFF"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <View
            android:id="@+id/CuadroCiclo"
            android:layout_width="358dp"
            android:layout_height="286dp"
            android:background="@drawable/fondotransparente"
            android:backgroundTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.352" />

        <TextView
            android:id="@+id/NuevoSintoma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nuevo Sintoma"
            android:textColor="#FFFFFFFF"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/CuadroCiclo"
            app:layout_constraintEnd_toEndOf="@+id/CuadroCiclo"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/CuadroCiclo"
            app:layout_constraintTop_toTopOf="@+id/CuadroCiclo"
            app:layout_constraintVertical_bias="0.088" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/CuadroCiclo"
            app:layout_constraintEnd_toEndOf="@+id/CuadroCiclo"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="@+id/CuadroCiclo"
            app:layout_constraintTop_toTopOf="@+id/CuadroCiclo"
            app:layout_constraintVertical_bias="0.207" />

    <TextView
            android:id="@+id/Sintoma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sintoma"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/CuadroCiclo"
            app:layout_constraintEnd_toEndOf="@+id/CuadroCiclo"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="@+id/CuadroCiclo"
            app:layout_constraintTop_toTopOf="@+id/CuadroCiclo"
            app:layout_constraintVertical_bias="0.411" />


    <ImageButton
        android:id="@+id/atras5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="#008C5D5D"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24" />

    <ImageButton
        android:id="@+id/emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/CuadroCiclo"
        app:layout_constraintTop_toTopOf="@+id/CuadroCiclo"
        app:srcCompat="@drawable/baseline_emoji_emotions_24" />
    <Button
        android:id="@+id/Guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#A55265"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="@+id/CuadroCiclo"
        app:layout_constraintEnd_toEndOf="@+id/CuadroCiclo" />

    <LinearLayout
        android:id="@+id/selector"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:background="@drawable/fondocuadros"
        android:backgroundTint="#634D59"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CuadroCiclo"
        app:layout_constraintVertical_bias="0.827">

        <Button
            android:id="@+id/Informacion"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/informacion"
            android:textColor="#51FFFFFF" />

        <Button
            android:id="@+id/sintomas"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#A55265"
            android:text="@string/sintomas" />

        <Button
            android:id="@+id/Notas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/notas"
            android:textColor="#52FFFFFF" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>