<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodegradable"
    tools:context="data.ui.Notas">


    <TextView
        android:id="@+id/Sintomas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notas"
        android:textColor="#FFFFFF"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <View
        android:id="@+id/CuadroCiclo"
        android:layout_width="358dp"
        android:layout_height="456dp"
        android:background="@drawable/fondotransparente"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

        <TextView
            android:id="@+id/NuevoSintoma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Titulo"
            android:textColor="#FFFFFFFF"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/CuadroCiclo"
            app:layout_constraintEnd_toEndOf="@+id/CuadroCiclo"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toStartOf="@+id/CuadroCiclo"
            app:layout_constraintTop_toTopOf="@+id/CuadroCiclo"
            app:layout_constraintVertical_bias="0.038" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/CuadroCiclo"
            app:layout_constraintEnd_toEndOf="@+id/CuadroCiclo"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="@+id/CuadroCiclo"
            app:layout_constraintTop_toTopOf="@+id/CuadroCiclo"
            app:layout_constraintVertical_bias="0.153" />

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFA55265"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.456"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.947"
             />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFA55265"
            app:layout_constraintBottom_toBottomOf="@+id/CuadroCiclo"
            app:layout_constraintEnd_toEndOf="@+id/CuadroCiclo"
            app:layout_constraintHorizontal_bias="0.908"
            app:layout_constraintStart_toStartOf="@+id/CuadroCiclo"
            app:layout_constraintTop_toTopOf="@+id/CuadroCiclo"
            app:layout_constraintVertical_bias="0.948"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Escriba su nota aqui"
            android:textColor="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/CuadroCiclo"
            app:layout_constraintEnd_toEndOf="@+id/CuadroCiclo"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="@+id/CuadroCiclo"
            app:layout_constraintTop_toTopOf="@+id/CuadroCiclo"
            app:layout_constraintVertical_bias="0.203" />

    <ImageButton
        android:id="@+id/atras3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_new_24" />


    <Button
        android:id="@+id/Guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#FFA55265"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="@+id/CuadroCiclo"
        app:layout_constraintEnd_toEndOf="@+id/CuadroCiclo" />

    <LinearLayout
        android:id="@+id/selector"
        android:layout_width="397dp"
        android:layout_height="50dp"
        android:background="@drawable/fondocuadros"
        android:backgroundTint="#634D59"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CuadroCiclo"
        app:layout_constraintVertical_bias="0.827">

        <Button
            android:id="@+id/Informacion"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/informacion"
            android:textColor="#51FFFFFF" />

        <Button
            android:id="@+id/sintomas"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00A55265"
            android:text="@string/sintomas"
            android:textColor="#6BFFFFFF" />

        <Button
            android:id="@+id/Notas"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFA55265"
            android:text="@string/notas"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>