<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="@drawable/fondodegradable"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/Sintomas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sintomas"
        android:textColor="#FFFFFF"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <View
        android:id="@+id/CuadroCiclo"
        android:layout_width="358dp"
        android:layout_height="286dp"
        android:background="@drawable/cuadrotransparente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <TextView
        android:id="@+id/NuevoSintoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sintomas Recurrentes"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/CuadroCiclo"
        app:layout_constraintEnd_toEndOf="@+id/CuadroCiclo"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="@+id/CuadroCiclo"
        app:layout_constraintTop_toTopOf="@+id/CuadroCiclo"
        app:layout_constraintVertical_bias="0.077"
        />

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/CuadroCiclo"
        app:layout_constraintEnd_toEndOf="@+id/CuadroCiclo"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="@+id/CuadroCiclo"
        app:layout_constraintTop_toTopOf="@+id/CuadroCiclo"
        app:layout_constraintVertical_bias="0.207" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="@+id/CuadroCiclo"
        app:layout_constraintEnd_toEndOf="@+id/CuadroCiclo" />

    <LinearLayout
        android:id="@+id/selector"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:background="@drawable/fondocuadros"
        android:backgroundTint="#634D59"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CuadroCiclo"
        app:layout_constraintVertical_bias="0.827">

        <Button
            android:id="@+id/Informacion"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/informacion"
            android:textColor="#51FFFFFF" />

        <Button
            android:id="@+id/sintomas"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#A55265"
            android:text="@string/sintomas" />

        <Button
            android:id="@+id/Notas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/notas"
            android:textColor="#52FFFFFF" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>